<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VocabularySetupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp">

            <TextView
                android:id="@+id/textViewVocabulary1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_vocabularyMotherTongue"
                android:textAlignment="center" />


            <EditText
                android:id="@+id/editTextVocabulary1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewVocabulary2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/textview_vocabularyForeignLanguage"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextVocabulary2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewSampleSentence1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/textview_sampleSentenceMotherTongue"
                android:textAlignment="center" />

            <AutoCompleteTextView
                android:id="@+id/editTextSampleSentence1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textViewSampleSentence2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/textview_sampleSentenceForeignLanguage"
                android:textAlignment="center" />

            <AutoCompleteTextView
                android:id="@+id/editTextSampleSentence2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textViewVocabularySetupLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/textview_LanguageToLearn"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spinnerVocabularySetupLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewVocabularySetupCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textview_VocabularySetupCategory"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spinnerVocabularySetupCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnAddVocabulary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_addVocabulary" />

            <Button
                android:id="@+id/btn_VocabularyLexicon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_StartLexicon" />

            <Button
                android:id="@+id/buttonBackFromVocabulary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_back" />

        </LinearLayout>

    </ScrollView>

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>