<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:foregroundTint="#9F5A5A"
    tools:context=".StartSettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_startsettings_category"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/spinner_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewCategory2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_startsettings_lvl"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/spinner_lvl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_startsettings_category"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <CheckBox
                            android:id="@+id/checkBox7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CheckBox" />

                        <CheckBox
                            android:id="@+id/checkBox8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CheckBox" />

                        <CheckBox
                            android:id="@+id/checkBox6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CheckBox" />

                        <CheckBox
                            android:id="@+id/checkBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CheckBox" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <CheckBox
                            android:id="@+id/checkBox9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CheckBox" />

                        <CheckBox
                            android:id="@+id/checkBox10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CheckBox" />

                        <CheckBox
                            android:id="@+id/checkBox2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CheckBox" />

                        <CheckBox
                            android:id="@+id/checkBox3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CheckBox" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <CheckBox
                            android:id="@+id/checkBox13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CheckBox" />

                        <CheckBox
                            android:id="@+id/checkBox12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CheckBox" />

                        <CheckBox
                            android:id="@+id/checkBox11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CheckBox" />

                        <CheckBox
                            android:id="@+id/checkBox4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CheckBox" />
                    </TableRow>

                </TableLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_questions"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <SeekBar
                    android:id="@+id/seekBarQuestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:max="100" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/textview_difficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_difficulty"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewStatusSeekbarDifficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <SeekBar
                    android:id="@+id/seekBarDifficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#D55959"
                    android:indeterminate="false"
                    android:max="15"
                    android:progressTint="#375867" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <View
                    android:id="@+id/divider7"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="bottom|clip_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="?android:attr/listDivider" />

                <Button
                    android:id="@+id/btn_start_leasson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_startlesson" />

                <Button
                    android:id="@+id/btn_back_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|clip_horizontal"
                    android:text="@string/btn_back" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>